--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@langchain/openai": "^0.2.5",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "langchain": "^0.2.12",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18",
